--- a/vscode-handler.desktop
+++ b/vscode-handler.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Terminal=false
 Type=Application
 Name=VS Code URL Handler
-Comment=Handle URL Scheme vscode://
+Comment=Handle URL Scheme vs-code://
 Icon=vscode-hanlder
 NoDisplay=true
 Exec=vscode-handler %u
